Closed Bug 441923 Opened 16 years ago Closed 16 years ago

Plugin SDK scriptable sample crash [@ nsPluginInstance::~nsPluginInstance]

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.1a1

People

(Reporter: jst, Assigned: jst)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Turns out our scriptable sample (at least the windows version) crashes in the nsPluginInstance destructor if no scriptable interface is available. A simple null check of mScriptableInfo would fix this, patch coming up...
Flags: wanted1.9.1+
Attached patch Add null checks.Splinter Review
Attachment #326810 - Flags: superreview?(jonas)
Attachment #326810 - Flags: review?(jonas)
Attachment #326810 - Flags: superreview?(jonas)
Attachment #326810 - Flags: superreview+
Attachment #326810 - Flags: review?(jonas)
Attachment #326810 - Flags: review+
Fix checked in.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Johnny it would be nice to have the top frame of the stack in the summary. I believe this will be nsPluginInstance::~nsPluginInstance? Which scriptable sample do you mean?
Severity: normal → critical
Keywords: crash
Target Milestone: mozilla1.9.1 → mozilla1.9.1a1
Version: unspecified → Trunk
Summary: Plugin SDK scriptable sample crash in nsPluginInstance dtor. → Plugin SDK scriptable sample crash [@ nsPluginInstance::~nsPluginInstance]
This was a report that came in through a plugin vendor and I don't have that information. They just pointed me to the problem in our sample, which their plugin was based on, so what's in this bug is about all I know.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee: nobody → jst
Status: REOPENED → NEW
Thanks Johnny. But without a sample I'm not able to verify this bug. I'll let it stay at resolved.
Status: NEW → RESOLVED
Closed: 16 years ago16 years ago
Resolution: --- → FIXED
Crash Signature: [@ nsPluginInstance::~nsPluginInstance]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: